--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>api project</title>
+    <title>API project</title>
   </head>
   <body>
     <div id="app"></div>
-    open console
     <h2 id = "api-response"></h2>
     <script type="module" src="js/main.js"></script>
   </body>
