--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <h2 id = "api-response"></h2>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/api.js"></script>
   </body>
 </html>
