--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "styles/style.css"/>
-    <title>API project</title>
+    <title>Valorant Shop </title>
   </head>
   <body>
-    <h2 id = "api-response"></h2>
+    <h2 id = "display"></h2>
     <script type="module" src="js/api.js"></script>
   </body>
 </html>
