--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "styles/style.css"/>
-    <title>Valorant Shop </title>
+    <title></title>
   </head>
   <body>
     <h2 id = "display"></h2>
