--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -9,6 +9,7 @@
     <title></title>
   </head>
   <body>
+    <h1 id = "gallery"> Gallery</h1>
     <h2 id = "display"></h2>
     <script type="module" src="js/api.js"></script>
   </body>
