--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "styles/style.css"/>
-    <title></title>
+    <title> VALORANT</title>
   </head>
   <body>
-    <h1 id = "gallery"> Gallery</h1>
+    <header id = "header"> Cool Skins </header>
+    Search for Bundle <input type="text" name="search" size="10" /> 
+    <h1 id = "gallery"> VALORANT Shop </h1>
     <h2 id = "display"></h2>
     <script type="module" src="js/api.js"></script>
   </body>
