--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel = "stylesheet" href = "styles/style.css"/>
-    <title> VALORANT</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>VALORANT</title>
   </head>
   <body>
-    <header id = "header"> Cool Skins </header>
-    Search for Bundle <input type="text" name="search" size="10" /> 
-    <h1 id = "gallery"> VALORANT Shop </h1>
-    <h2 id = "display"></h2>
+    <h1 id="gallery">VALORANT Shop</h1>
+    <form name="skinbar" class="skinbar">
+      <label for="name-input"> Type Bundle Name Here </label>
+      <input name="name" id="name" />
+      <br />
+      <input type="reset" id="reset" />
+      <button type="submit" id="submit" onClick="getSkin()">Done</button>
+    </form>
+    <h2 id="display"></h2>
     <script type="module" src="js/api.js"></script>
   </body>
 </html>
