--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -14,10 +14,10 @@
   <body>
     <h1 id="gallery">VALORANT Shop</h1>
     <form name="skinbar" class="skinbar">
-      <label for="name-input"> Type Bundle Name Here </label>
-      <input name="name" id="name" />
+      <label for ="name-input" placeholder = "dababy"> Type Bundle Name Here </label>
+      <input name="name-input" id="name" />
       <br />
-      <input type="reset" id="reset" />
+      <input type="reset" id="reset" value = "reset" />
       <button type="submit" id="submit" onClick="getSkin()">Done</button>
     </form>
     <h2 id="display"></h2>
