--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <h1 id="gallery">VALORANT DISPLAY</h1>
-    <form name="skinbar" class="skinbar" label for = "skinbar">
-      <label for ="name-input" placeholder = "dababy"> Type Bundle Name Here </label>
+    <form name="skinbar" class= "skinbar" label for = "skinbar" id = "skinbar">
+      <label for = "name-input" placeholder = "dababy"> Type Bundle Name Here </label>
       <input name="name-input" id="name" />
       <br />
       <input type="reset" id="reset" value = "reset" />
