--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -12,15 +12,7 @@
     <title>VALORANT</title>
   </head>
   <body>
-    <h1 id="gallery">VALORANT DISPLAY</h1>
-    <form name="skinbar" class= "skinbar" label for = "skinbar" id = "skinbar">
-      <label for = "name-input" placeholder = "dababy"> Type Bundle Name Here </label>
-      <input name="name-input" id="name" />
-      <br />
-      <input type="reset" id="reset" value = "reset" />
-      <button type="submit" id="submit" >Done</button>
-    </form>
-     
+    <h1 id="gallery" footer = "display">VALORANT DISPLAY</h1>
     <h2 id="display"></h2>
     <script type="module" src="js/api.js"></script>
   </body>
