--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -13,6 +13,11 @@
   </head>
   <body>
     <h1 id="gallery" footer = "display">VALORANT DISPLAY</h1>
+    <div class = "options"> 
+      <button class = "options-button" id = "all"> All Bundles</button>
+      <button class = "options-button" id = "random"> Random </button>
+      <button class = "options-button" id = "best"> The Best Bundles</button>
+    </div>
     <h2 id="display"></h2>
     <script type="module" src="js/api.js"></script>
   </body>
