--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -16,7 +16,7 @@
     <div class = "options"> 
       <button class = "options-button" id = "all"> All Bundles</button>
       <button class = "options-button" id = "random"> Random </button>
-      <button class = "options-button" id = "best"> The Best Bundles</button>
+      <button class = "options-button" id = "best"> Random x 5</button>
     </div>
     <h2 id="display"></h2>
     <script type="module" src="js/api.js"></script>
