--- a/api-project/api-project/index.html
+++ b/api-project/api-project/index.html
@@ -12,11 +12,12 @@
     <title>VALORANT</title>
   </head>
   <body>
-    <h1 id="gallery" footer = "display">VALORANT DISPLAY</h1>
+    <h1 id="gallery" footer = "display">Valorant Bundles</h1>
     <div class = "options"> 
       <button class = "options-button" id = "all"> All Bundles</button>
       <button class = "options-button" id = "random"> Random </button>
       <button class = "options-button" id = "best"> Random x 5</button>
+      <button class = "options-button" id = "great"> The Best Skinline (no cap)</button>
     </div>
     <h2 id="display"></h2>
     <script type="module" src="js/api.js"></script>
